Disable old receiver